# kurir

./: README.md  example.py  pyproject.toml  requirements.txt
kurir/: __init__.py  checker.py  health.py  pool.py  retry.py  session.py
kurir/filters/: __init__.py  geo.py
kurir/interfaces/: __init__.py  filter.py  rate_limiter.py  source.py  strategy.py  tracker.py  validator.py
kurir/rate_limiters/: __init__.py  token_bucket.py
kurir/sources/: __init__.py  file.py  github.py  url.py
kurir/strategies/: __init__.py  random.py  round_robin.py
kurir/validators/: __init__.py  http.py
tests/: test_checker.py  test_geo_filter.py  test_health.py  test_pool.py  test_rate_limiter.py  test_session.py  test_sources.py  test_strategies.py  test_validators.py
